Avoid page jumps once text is added to the display

--- a/main.css
+++ b/main.css
@@ -32,6 +32,8 @@ button {
     background-color: #eee;
     border: 1px solid #ddd;
     padding: 5px;
+    height: 50px;
+    line-height: 50px;
 }
 
 /* Numbers */
